--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
 	"icons": {
 		"128": "icon_128.png"
 	},
-	"permissions": ["storage", "alarms"],
+	"permissions": ["storage", "alarms", "notifications"],
 	"app": {
 		"background": {
 			"scripts": ["background.js"]
